; ModuleID = '/home/carl/AnghaBench/git/extr_http-push.c_get_remote_object_list.c'
source_filename = "/home/carl/AnghaBench/git/extr_http-push.c_get_remote_object_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.get_remote_object_list.path = private unnamed_addr constant [12 x i8] c"objects/XX/\00", align 1
@get_remote_object_list.hex = internal constant [17 x i8] c"0123456789abcdef\00", align 16
@remote_dir_exists = common dso_local global i64* null, align 8
@PROCESS_FILES = common dso_local global i32 0, align 4
@PROCESS_DIRS = common dso_local global i32 0, align 4
@process_ls_object = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8)* @get_remote_object_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_remote_object_list(i8 zeroext %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca [12 x i8], align 1
  %4 = alloca i32, align 4
  store i8 %0, i8* %2, align 1
  %5 = bitcast [12 x i8]* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %5, i8* align 1 getelementptr inbounds ([12 x i8], [12 x i8]* @__const.get_remote_object_list.path, i32 0, i32 0), i64 12, i1 false)
  %6 = load i8, i8* %2, align 1
  %7 = zext i8 %6 to i32
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = lshr i32 %8, 4
  %10 = zext i32 %9 to i64
  %11 = getelementptr inbounds [17 x i8], [17 x i8]* @get_remote_object_list.hex, i64 0, i64 %10
  %12 = load i8, i8* %11, align 1
  %13 = getelementptr inbounds [12 x i8], [12 x i8]* %3, i64 0, i64 8
  store i8 %12, i8* %13, align 1
  %14 = load i32, i32* %4, align 4
  %15 = and i32 %14, 15
  %16 = zext i32 %15 to i64
  %17 = getelementptr inbounds [17 x i8], [17 x i8]* @get_remote_object_list.hex, i64 0, i64 %16
  %18 = load i8, i8* %17, align 1
  %19 = getelementptr inbounds [12 x i8], [12 x i8]* %3, i64 0, i64 9
  store i8 %18, i8* %19, align 1
  %20 = load i64*, i64** @remote_dir_exists, align 8
  %21 = load i32, i32* %4, align 4
  %22 = zext i32 %21 to i64
  %23 = getelementptr inbounds i64, i64* %20, i64 %22
  store i64 0, i64* %23, align 8
  %24 = getelementptr inbounds [12 x i8], [12 x i8]* %3, i64 0, i64 0
  %25 = load i32, i32* @PROCESS_FILES, align 4
  %26 = load i32, i32* @PROCESS_DIRS, align 4
  %27 = or i32 %25, %26
  %28 = load i32, i32* @process_ls_object, align 4
  %29 = call i32 @remote_ls(i8* %24, i32 %27, i32 %28, i32* %4)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @remote_ls(i8*, i32, i32, i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
